# AuD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Writeup.md  resultsPrioConfig.md
eval/: main.py  requirements.txt
src/: main.c
src/airplane/: airplane.c  airplane.h
src/manager/: manager.c  manager.h
src/prioSys/: prioEarly.c  prioEarly.h  prioQueue.c  prioQueue.h
src/queue/: queue.c  queue.h
src/utils/: logger.c  logger.h  misc.c  misc.h  settings.h
